OLMIS-1167 after review fix

--- a/src/main/webapp/public/requisitions/approval-list/approval-list.html
+++ b/src/main/webapp/public/requisitions/approval-list/approval-list.html
@@ -14,7 +14,7 @@
                        ng-model="query"/>
                 <span openlmis-message="label.in"></span>
                 <openlmis-select
-                        placeholder="{{ typeOptionMessage() }}",
+                        placeholder="{{ 'label.select.type' | message }}",
                         ng-model="searchField",
                         items="labels",
                         field-displayed="name",
