OLMIS-1160: Merge with master branch, minor improvements

--- a/src/main/webapp/public/dashboard/header.html
+++ b/src/main/webapp/public/dashboard/header.html
@@ -7,5 +7,7 @@
   <div ng-show="!!user">
     <ng-include src="'/public/dashboard/user.html'"></ng-include>
   </div>
-  <div id="loader" class="loader-icon"></div>
+  <div id="loader" class="loader-icon">
+    <img src="/public/images/loader.gif"/>
+  </div>
 </div>
