--- a/src/main/webapp/public/requisitions/product-grid/losses-and-adjustments.html
+++ b/src/main/webapp/public/requisitions/product-grid/losses-and-adjustments.html
@@ -6,7 +6,7 @@
             <div class="col-md-5">
                 <openlmis-select ng-model="adjustment.reason"
                     items="stockAdjustmentReasons"
-                    display-field="name"
+                    field-displayed="name"
                     track-by="name"
                     ></openlmis-select>
             </div>
