OLMIS-1220: add documentation and tests for requisition view page

--- a/src/main/webapp/public/requisitions/requisition-view/requisition-view.html
+++ b/src/main/webapp/public/requisitions/requisition-view/requisition-view.html
@@ -13,8 +13,7 @@
                 ng-model="selectedFacility"
                 items="facilities"
                 field-displayed="name"
-                track-by="id"
-                ng-change="loadPrograms()">
+                track-by="id">
             </openlmis-select>-->
         </div>
         <div class="form-group">
