--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -31,15 +31,13 @@
         order-by="id"
         track-by="name"></openlmis-select>
     </div>
-    <div class="form-group">
-      <label for="rnrType" openlmis-message="label.requisition.type"></label>
-      <openlmis-select id="rnrType" ng-model="selectedRnrType"
-                       items="rnrTypes.types"
-                       field-displayed="name"
-                       placeholder="{{ selectedRnrType.name }}"
-                       track-by="emergency">
-      </openlmis-select>
-    </div>
+    <fieldset class="form-group">
+      <legend openlmis-message="label.requisition.type"></legend>
+      <label ng-repeat="type in rnrTypes.types" class="radio">
+        {{type.name}}
+        <input type="radio" ng-model="selectedRnrType.emergency" ng-value="type.emergency" />
+      </label>
+    </fieldset>
   </form>
   <div ng-show="selectedProgram && selectedFacilityId && periodGridData && !(periodGridData.length == 0)"
     ui-grid="periodGridOptions"
