--- a/src/main/webapp/public/requisitions/convert-to-order/convert-to-order.html
+++ b/src/main/webapp/public/requisitions/convert-to-order/convert-to-order.html
@@ -2,16 +2,58 @@
 	<div class="page">
 		<h2 openlmis-message="label.requisition.convertOrder"></h2>
 		<div class="filters" ng-if="!nothingToConvert">
-			<select class="filter-by" ng-model="searchParams.filterBy" ng-options="filter.value as translate(filter.name) for filter in filters"></select>
+			<select class="filter-by" ng-model="searchParams.filterBy">
+				<option ng-repeat="filter in filters" value="{{filter.value}}" ng-selected="searchParams.filterBy === filter.value" openlmis-message="{{filter.name}}"></option>
+			</select>
 			<input class="filter-value" ng-model="searchParams.filterValue" maxlength="50"/>
-			<button class="search" ng-click="reloadGrid()"><span class="fa fa-search"></span></button>
+			<button class="search" ng-click="reload()"><span class="fa fa-search"></span></button>
 		</div>
-		<div class="info-message" ng-if="getInfoMessage()" openlmis-message="{{getInfoMessage()}}"></div>
-		<div ng-if="filteredRequisitions.length" class="grid" ui-grid="gridOptions" ui-grid-selection></div>
+		<div class="info-message" ng-if="infoMessage" openlmis-message="{{infoMessage}}"></div>
+		
+		<table ng-if="requisitions.length">
+			<thead>
+				<tr>
+					<th><input type="checkbox" ng-model="selectAll" ng-change="toggleSelectAll(selectAll)"></th>
+					<th openlmis-message="program.header"></th>
+					<th openlmis-message="option.value.facility.code"></th>
+					<th openlmis-message="option.value.facility.name"></th>
+					<th openlmis-message="option.value.facility.district"></th>
+					<th openlmis-message="label.period.start.date"></th>
+					<th openlmis-message="label.period.end.date"></th>
+					<th openlmis-message="label.date.modified"></th>
+					<th openlmis-message="label.supplying.depot"></th>
+					<th openlmis-message="requisition.type.emergency"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="item in requisitions">
+					<td><input type="checkbox" ng-model="item.$selected" ng-change="setSelectAll()"></td>
+					<td>{{item.requisition.program.name}}</td>
+					<td>{{item.requisition.facility.code}}</td>
+					<td>{{item.requisition.facility.name}}</td>
+					<td>{{item.requisition.facility.geographicZone.parent.name}}</td>
+					<td>{{item.requisition.processingPeriod.startDate | date:'shortDate'}}</td>
+					<td>{{item.requisition.processingPeriod.endDate | date:'shortDate'}}</td>
+					<td>{{item.requisition.processingPeriod.processingSchedule.modifiedDate | date:'shortDate'}}</td>
+					<td>
+						<div>
+							<select class="form-control" ng-model="item.requisition.supplyingFacility">
+								<option value="{{undefined}}" ng-if="!item.requisition.supplyingFacility" openlmis-message="label.select.none"></option>
+								<option ng-repeat="depot in item.supplyingDepots track by depot.id" value="{{depot.id}}">{{depot.name}}</option>
+							</select>
+						</div>
+					</td>
+					<td>
+						<i ng-class="{'fa fa-check': item.requisition.emergency}"></i>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+
 	</div>
-	<div class="toolbar" ng-if="filteredRequisitions.length">
+	<div class="toolbar" ng-if="requisitions.length">
 	    <button class="convert-to-order"
-	    		ng-disabled="!gridApi.selection.getSelectedCount()"
+	    		ng-disabled="!getSelected().length"
 	 			ng-click="convertToOrder()">
 	 				<span openlmis-message="link.requisitions.convertToOrder"></span>
 	 	</button>
