OLMIS-1167 Unified select width, can set default value
using attribute default-value can set default option, width of select element is now set to 250px

--- a/src/main/webapp/public/common/select.html
+++ b/src/main/webapp/public/common/select.html
@@ -1,8 +1,9 @@
 <div>
     <ui-select ng-model="selected.item" search-enabled="searchEnabled">
-        <ui-select-match ng-model="selected.item" placeholder="{{placeholder}}" >
+        <ui-select-match  ng-model="selected.item" placeholder="{{placeholder}}" >
             {{$select.selected[fieldDisplayed]}}</ui-select-match>
-        <ui-select-choices repeat="item in items | orderBy:'{{orderBy}}' track by item[trackBy]">
+        <ui-select-choices style="width:parent"
+                           repeat="item in items | orderBy:'{{orderBy}}' track by item[trackBy]">
             {{item[fieldDisplayed]}}
         </ui-select-choices>
     </ui-select>
