--- a/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
+++ b/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
@@ -48,11 +48,13 @@
             <label for="endDate" openlmis-message="label.to"></label>
             <openlmis-datepicker input-id="endDate" value="endDate"></openlmis-datepicker>
         </div>
+        <div class="form-group">
+            <input id="searchButton" ng-click="search()"
+                class="btn btn-primary"
+                openlmis-message="button.search" type="button"
+                ng-if="selectedFacility"/>
+        </div>
     </form>
-    <input id="searchButton" ng-click="search()"
-        class="btn btn-primary"
-        openlmis-message="button.search" type="button"
-        ng-if="selectedFacility"/>
     <div id="requisitionViewList" 
         class="grid grid-requisition-list" 
         ui-grid="gridOptions" 
