--- a/src/main/webapp/public/requisitions/convert-to-order/convert-to-order.html
+++ b/src/main/webapp/public/requisitions/convert-to-order/convert-to-order.html
@@ -37,9 +37,8 @@
 					<td>{{item.requisition.processingPeriod.processingSchedule.modifiedDate | date:'shortDate'}}</td>
 					<td>
 						<div>
-							<select class="form-control" ng-model="item.requisition.supplyingFacility">
-								<option value="{{undefined}}" ng-if="!item.requisition.supplyingFacility" openlmis-message="label.select.none"></option>
-								<option ng-repeat="depot in item.supplyingDepots track by depot.id" value="{{depot.id}}">{{depot.name}}</option>
+							<select class="form-control" ng-model="item.requisition.supplyingFacility" ng-options="depot.id as depot.name for depot in item.supplyingDepots">
+								<option ng-value="" ng-if="!item.requisition.supplyingFacility" openlmis-message="label.select.none"></option>
 							</select>
 						</div>
 					</td>
