OLMIS-1077: Fix unreadable error message while period is not found

--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -48,7 +48,7 @@
   <div ng-show="selectedProgram && selectedFacilityId && periodGridData && !(periodGridData.length == 0)"
     ui-grid="periodGridOptions"
     class="grid grid-init-rnr"
-    id="periodGrid"></div>
+    id="periodGrid">
   </div>
   <div ng-if="error" class="alert alert-error" openlmis-message="error" ng-show="error"></div>
 </div>
