OLMIS-494: added user profile page

--- a/src/main/webapp/public/dashboard/header.html
+++ b/src/main/webapp/public/dashboard/header.html
@@ -5,7 +5,7 @@
     <h1 openlmis-message="label.app.header"></h1>
   </div>
   <div ng-show="!!user">
-    <ng-include src="'/public/pages/user.html'"></ng-include>
+    <ng-include src="'/public/dashboard/user.html'"></ng-include>
   </div>
   <div id="loader" class="loader-icon"></div>
 </div>
