OLMIS-1249: Add alert-info and update alert on view requisition page

--- a/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
+++ b/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
@@ -49,5 +49,5 @@
         class="grid grid-requisition-list" 
         ui-grid="gridOptions" 
         ng-if="requisitionList.length"></div>
-    <div ng-if="error" class="alert alert-error" openlmis-message="error" ng-show="error"></div>
+    <div ng-if="error" class="alert alert-info" openlmis-message="error" ng-show="error"></div>
 </div>
