OLMIS-1347 Required label on all required elements
Extended ngRequired directive that adds asterisk next to required field's label and a hidden "Required" span for screen readers

--- a/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
+++ b/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
@@ -6,6 +6,7 @@
             <openlmis-select
                 id="facility"
                 ng-model="selectedFacility"
+                ng-required
                 items="facilities"
                 field-displayed="name"
                 track-by="id">
@@ -15,6 +16,7 @@
             <label for="program" openlmis-message="label.program"></label>
             <openlmis-select
                 id="program"
+                ng-required
                 ng-model="selectedProgram"
                 items="programs"
                 field-displayed="name"
