OLMIS-1341: Pre-cache all HTML templates and partials
Using https://www.npmjs.com/package/grunt-angular-templates

All html files except index go into openlmis.js and get registered
with the template cache. At build a file .tmp/templates.js is generated
then it gets concatenated into openlmis.js

I also removed ng-html2js from karma configuration.

--- a/src/main/webapp/public/dashboard/header.html
+++ b/src/main/webapp/public/dashboard/header.html
@@ -5,6 +5,6 @@
     <h1 openlmis-message="label.app.header"></h1>
   </div>
   <div ng-show="!!user">
-    <ng-include src="'/public/dashboard/user.html'"></ng-include>
+    <ng-include src="'dashboard/user.html'"></ng-include>
   </div>
 </div>
