OLMIS-1249 FEOLMIS-515 Moved alerts to the new file
Also updated names of alerts to follow SMACSS convention

--- a/src/main/webapp/public/auth/login-form.html
+++ b/src/main/webapp/public/auth/login-form.html
@@ -27,7 +27,8 @@
                       <label for="login-password" openlmis-message="label.password"></label>
                       <input ng-model="password" type="password" id="login-password" required/>
                   </div>
-                  <div id="loginError" class="alert alert-error" ng-bind="loginError" ng-show="loginError"></div>
+                  <div id="loginError" class="alert is-error" ng-bind="loginError"
+                       ng-show="loginError"></div>
                   <div class="login-form-row">
                       <input class="btn btn-primary" type="submit" openlmis-message="button.sign.in"
                              ng-disabled="disableSignInButton"/>
