--- a/src/main/webapp/public/requisitions/approval-list/approval-list.html
+++ b/src/main/webapp/public/requisitions/approval-list/approval-list.html
@@ -1,9 +1,6 @@
 <div class="page">
     <h2 openlmis-message="label.approve.requisitions"></h2>
-    <div class="alert alert-success" id="saveSuccessMsgDiv" ng-show="message"
-         ng-bind="$parent.message">
-    </div>
-    <div class="alert alert-info" id="NoRequisitionsPendingMessage" ng-hide="requisitions.length"
+    <div class="alert is-info" id="NoRequisitionsPendingMessage" ng-hide="requisitions.length"
          openlmis-message="message.no.rnr.pending.approval">
     </div>
     <div class="approval-list" ng-show="requisitions.length">
