--- a/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
+++ b/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
@@ -51,5 +51,5 @@
         class="grid grid-requisition-list" 
         ui-grid="gridOptions" 
         ng-if="requisitionList.length"></div>
-    <div ng-if="error" class="alert alert-info" openlmis-message="error" ng-show="error"></div>
+    <div ng-if="error" class="alert is-info" openlmis-message="error" ng-show="error"></div>
 </div>
