--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -50,5 +50,5 @@
     class="grid grid-init-rnr"
     id="periodGrid">
   </div>
-  <div ng-if="error" class="alert alert-error" openlmis-message="error" ng-show="error"></div>
+  <div ng-if="error" class="alert is-error" openlmis-message="error" ng-show="error"></div>
 </div>
