--- a/src/main/webapp/public/common/notification.html
+++ b/src/main/webapp/public/common/notification.html
@@ -1,3 +1,3 @@
-<div class="notification {{class}}" ng-click="closeNotification()">
+<div class="notification {{class}}">
 	<span class="glyphicon {{glyphicon}}"></span>{{message}}
 </div>
