--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -9,7 +9,7 @@
   ~ You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
   -->
 
-<html lang="en" ng-app="openlmis" xmlns="http://www.w3.org/1999/html">
+<html lang="en" ng-app="openlmis" manifest="manifest.appcache" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="utf-8">
   <title openlmis-message="app.title"></title>
