OLMIS-1209: Added Non Full Supply Product(s) tab and add product modal
In this ticket the Non Full Supply Product(s) tab has been added. Product grid is now a state that can render either Full Supply or Non Full Supply Product(s) grids.
When Product Grid is displaying a Non Full Supply Product(s) grid, an Add button is visible that let's the user to add a product from approved products list. If the user
decides to remove the product, he can do that by clicking remove button(only items that has been added in the current session can be removed, once the requisition is saved
it will be no longer possible). Products that already are lineItems won't be available in the modal. Some refactor has been done to migrade Product Grid to its own state.

--- a/src/main/webapp/public/requisitions/requisition/requisition.html
+++ b/src/main/webapp/public/requisitions/requisition/requisition.html
@@ -8,7 +8,11 @@
   ~ You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
   -->
 <div class="page">
-    <ng-include src="'requisitions/header.html'"></ng-include>
-    <product-grid ng-model=requisition></product-grid>
+    <ng-include src="'requisitions/requisition/header.html'"></ng-include>
+    <ul class="nav nav-tabs">
+      <li ui-sref-active="active" role="presentation"><a ui-sref="requisitions.requisition.fullSupplyProducts">{{'label.full.supply.products' | message}}</a></li>
+      <li ui-sref-active="active" ng-if="requisition.$template.showNonFullSupplyTab" role="presentation"><a ui-sref="requisitions.requisition.nonFullSupplyProducts">{{'label.non.full.supply.products' | message}}</a></li>
+    </ul>
+    <div ui-view=""></div>
 </div>
 <ng-include src="'requisitions/requisition-toolbar.html'"></ng-include>
