--- a/src/main/webapp/public/requisitions/requisition/product-grid/product-grid-cell.html
+++ b/src/main/webapp/public/requisitions/requisition/product-grid/product-grid-cell.html
@@ -1,5 +1,5 @@
 <div>
-	<div ng-if="isReadOnly">{{lineItem.$getColumnValue(column, ngModel.status)}}</div>
+	<div ng-if="isReadOnly">{{lineItem.$getColumnValue(column, requisitions.status)}}</div>
 	<input ng-if="!isReadOnly" type="text" ng-model="lineItem[column.name]" ng-change="validate()" ng-blur="validate()">
 	<div class="cell-error-message">{{lineItem.$getColumnError(column.name)}}</div>
 </div> 
