--- a/src/main/webapp/public/requisitions/requisition/losses-and-adjustments/losses-and-adjustments.html
+++ b/src/main/webapp/public/requisitions/requisition/losses-and-adjustments/losses-and-adjustments.html
@@ -25,7 +25,7 @@
         <ul><li ng-repeat="adjustment in currentRnrLineItem.stockAdjustments" class="adjustment">
             <label for="adjustment-quantity-{{$index}}" >{{getReasonName(adjustment.reasonId)}}</label>
             <input id="adjustment-quantity-{{$index}}" class="form-control" ng-model="adjustment.quantity" type="number" min="0" />
-            <button class="btn btn-default" ng-click="removeAdjustment(adjustment)">{{'button.remove' | message}}</button>
+            <button class="btn btn-danger" ng-click="removeAdjustment(adjustment)">{{'button.remove' | message}}</button>
         </li></ul>
     </div>
 
@@ -37,6 +37,6 @@
 
     <div class="modal-footer">
         <input type="submit" ng-click="closeLossesAndAdjustmentModal()"
-               class="btn btn-primary" openlmis-message="button.close"/>
+               class="btn btn-default" openlmis-message="button.close"/>
     </div>
 </div>
