OLMIS-1299: Clear input and select after add an adjustment

--- a/src/main/webapp/public/requisitions/requisition/losses-and-adjustments/losses-and-adjustments.html
+++ b/src/main/webapp/public/requisitions/requisition/losses-and-adjustments/losses-and-adjustments.html
@@ -7,8 +7,8 @@
                 <openlmis-select ng-model="adjustment.reason"
                     items="stockAdjustmentReasons"
                     field-displayed="name"
-                    track-by="name"
-                    ></openlmis-select>
+                    track-by="name">
+                </openlmis-select>
             </div>
             <div class="col-md-3">
                 <input type="number" min="0" openlmis-message="placeholder.quantity"
