added navigation bar dropdown submenu
bootstrap 3.0 does not support sub menus in dropdown anymore
it had to be done in our own css

--- a/src/main/webapp/public/dashboard/navigation.html
+++ b/src/main/webapp/public/dashboard/navigation.html
@@ -1,7 +1,7 @@
 <ul>
-  <li ng-repeat="state in states" ng-class="{'dropdown':hasChildStates(state)}" uib-dropdown>
-  	<a ng-if="hasChildStates(state)" class="dropdown-toggle" uib-dropdown-toggle openlmis-message="NavigationCtrl.getStateLabel(state)"></a>
-    <a ng-if="!hasChildStates(state)" ui-sref="{{state}}" openlmis-message="NavigationCtrl.getStateLabel(state)"></a>
-    <openlmis-navigation ng-if="hasChildStates(state)" class="dropdown-menu" uib-dropdown-menu root-state="state"></openlmis-navigation>
-  </li>
+    <li ng-repeat="state in states" ng-class="{'dropdown':hasChildStates(state), 'dropdown-submenu':isSubmenu(state)}" uib-dropdown>
+      	<a ng-if="hasChildStates(state)" class="dropdown-toggle" uib-dropdown-toggle openlmis-message="NavigationCtrl.getStateLabel(state)"></a>
+        <a ng-if="!hasChildStates(state)" ui-sref="{{state}}" openlmis-message="NavigationCtrl.getStateLabel(state)"></a>
+        <openlmis-navigation ng-if="hasChildStates(state)" class="dropdown-menu" uib-dropdown-menu root-state="state"></openlmis-navigation>
+    </li>
 </ul>
