--- a/src/main/webapp/public/requisitions/requisition/requisition.html
+++ b/src/main/webapp/public/requisitions/requisition/requisition.html
@@ -10,7 +10,7 @@
 <div class="page">
     <ng-include src="'requisitions/requisition/header.html'"></ng-include>
     <ul class="nav nav-tabs">
-      <li ui-sref-active="active" role="presentation"><a ui-sref="requisitions.requisition.fullSupplyProducts">{{'label.full.supply.products' | message}}</a></li>
+      <li ui-sref-active="active" role="presentation"><a ui-sref="requisitions.requisition.fullSupply">{{'label.full.supply.products' | message}}</a></li>
       <li ui-sref-active="active" ng-if="requisition.$template.showNonFullSupplyTab" role="presentation"><a ui-sref="requisitions.requisition.nonFullSupplyProducts">{{'label.non.full.supply.products' | message}}</a></li>
     </ul>
     <div ui-view=""></div>
