OLMIS-1233: Modified convert to order modal to be a directive

--- a/src/main/webapp/public/requisitions/requisition-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-toolbar.html
@@ -31,6 +31,9 @@
                class="btn btn-primary primary-action"
                openlmis-message="button.convert.to.order"
                ng-if="displayConvertToOrder()"
-               ng-click="convertRnr()"/>
+               convert-to-order
+               requisition="requisition"
+               facilities="facilities">
+        </input>
     </div>
 </div>
