OLMIS-1209: Delete button will now be hidden on the Non-Full-Supply screen for products that can't be deleted

--- a/src/main/webapp/public/requisitions/requisition/non-full-supply.html
+++ b/src/main/webapp/public/requisitions/requisition/non-full-supply.html
@@ -15,7 +15,7 @@
 				<td>
 					<button class="hide-line-item"
 							ng-click="vm.deleteLineItem(lineItem)"
-							ng-disabled="!lineItem.$hideable">
+							ng-if="lineItem.$hideable">
 								<i class="fa fa-remove"></i>
 					</button>
 				</td>
