OLMIS-1233: Updated list of options for warehouses
* show all of supplying depots for requisition
* updated documentation
* set supplying facility as default option
* removed unused injections

--- a/src/main/webapp/public/requisitions/requisition-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-toolbar.html
@@ -30,7 +30,7 @@
         <div ng-if="displayConvertToOrder()"
              convert-one-rnr-to-order
              requisition="requisition"
-             facilities="facilities">
+             requisitions="requisitions">
         </div>
     </div>
 </div>
