--- a/src/main/webapp/public/requisitions/requisition/convert-one-rnr-to-order/convert-one-rnr-to-order-modal.html
+++ b/src/main/webapp/public/requisitions/requisition/convert-one-rnr-to-order/convert-one-rnr-to-order-modal.html
@@ -3,11 +3,12 @@
     <div class="form-group">
         <input class="filter" type="text" ng-model="searchText" placeholder="Filter warehouses"/>
     </div>
-    <div class="form-group facilities">
-        <label ng-repeat="facility in facilities | filter:searchText" class="radio">
-            <input type="radio" name="radioBtn" ng-model="vm.requisition.supplyingFacility"
-                   ng-value="name"/>
-            {{facility.name}}
+    <div class="form-group depots">
+        <label ng-repeat="depot in vm.requisitionWithDepots.supplyingDepots | filter:searchText"
+               class="radio" >
+            <input type="radio" name="radioBtn" ng-value="depot.id"
+                   ng-model="vm.requisition.supplyingFacility"/>
+            {{depot.name}}
         </label>
     </div>
     <button class="convert-rnr" type="submit" ng-click="vm.hideModal()">
