--- a/src/main/webapp/public/auth/login-form.html
+++ b/src/main/webapp/public/auth/login-form.html
@@ -7,42 +7,40 @@
   ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
   ~ You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
   -->
-<div class="login-page">
-  <div class="login-container">
-      <div class="modal-login-header">
-          <h1 openlmis-message="label.app.header"></h1>
-          <openlmis-locale class="locale-container" />
-      </div>
+<div class="login-container">
+  <div class="modal-login-header">
+      <h1 openlmis-message="label.app.header"></h1>
+      <openlmis-locale class="locale-container" />
+  </div>
 
-      <div class="login-form" ng-controller="LoginController">
-          <h2 id="signInLabel" openlmis-message="label.sign.in"></h2>
+  <div class="login-form">
+      <h2 id="signInLabel" openlmis-message="label.sign.in"></h2>
 
-          <form ng-submit="doLogin()" novalidate>
-              <fieldset>
-                  <div class="login-form-row">
-                      <label for="login-username" openlmis-message="label.username"></label>
-                      <input ng-model="username" type="text" id="login-username" required autofocus/>
-                  </div>
-                  <div class="login-form-row">
-                      <label for="login-password" openlmis-message="label.password"></label>
-                      <input ng-model="password" type="password" id="login-password" required/>
-                  </div>
-                  <div id="loginError" class="alert is-error" ng-bind="loginError"
-                       ng-show="loginError"></div>
-                  <div class="login-form-row">
-                      <input class="btn btn-primary" type="submit" openlmis-message="button.sign.in"
-                             ng-disabled="disableSignInButton"/>
-                  </div>
-                  <div class="login-form-row forgot-link">
-                      <a id="forgotPasswordLink" href="" ng-click="goToForgotPassword()"
-                         openlmis-message="link.forgot.password"></a>
-                  </div>
-              </fieldset>
-          </form>
-      </div>
-      <div class="powered-by">
-          Powered by <a href="http://openlmis.org" target="_blank">OpenLMIS</a> v@major_version@.@minor_version@.@patch_version@ build @build_version@
-      </div>
+      <form ng-submit="doLogin()" novalidate>
+          <fieldset>
+              <div class="login-form-row">
+                  <label for="login-username" openlmis-message="label.username"></label>
+                  <input ng-model="username" type="text" id="login-username" required autofocus/>
+              </div>
+              <div class="login-form-row">
+                  <label for="login-password" openlmis-message="label.password"></label>
+                  <input ng-model="password" type="password" id="login-password" required/>
+              </div>
+              <div id="loginError" class="alert is-error" ng-bind="loginError"
+                   ng-show="loginError"></div>
+              <div class="login-form-row">
+                  <input class="btn btn-primary" type="submit" openlmis-message="button.sign.in"
+                         ng-disabled="disableSignInButton"/>
+              </div>
+              <div class="login-form-row forgot-link">
+                  <a id="forgotPasswordLink" href=""
+                     openlmis-message="link.forgot.password"></a>
+              </div>
+          </fieldset>
+      </form>
+  </div>
+  <div class="powered-by">
+      Powered by <a href="http://openlmis.org" target="_blank">OpenLMIS</a> v@major_version@.@minor_version@.@patch_version@ build @build_version@
   </div>
 </div>
 
