OLMIS-1209: Some fixes for the product grid issues

--- a/src/main/webapp/public/requisitions/requisition/non-full-supply.html
+++ b/src/main/webapp/public/requisitions/requisition/non-full-supply.html
@@ -24,6 +24,7 @@
 	</table>
 
 	<button class="add-product"
+			ng-if="vm.displayAddProductButton()"
 			add-product
 			requisition="vm.requisition">
 			{{'button.add' | message}}
