--- a/src/main/webapp/public/common/select.html
+++ b/src/main/webapp/public/common/select.html
@@ -1,5 +1,5 @@
 <div>
-    <ui-select ng-model="selected.item" search-enabled="searchEnabled">
+    <ui-select ng-model="selected.item" theme="select2" search-enabled="searchEnabled">
         <ui-select-match  ng-model="selected.item" placeholder="{{placeholder}}" >
             {{$select.selected[fieldDisplayed]}}</ui-select-match>
         <ui-select-choices style="width:parent"
