--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -15,21 +15,19 @@
     </fieldset>
     <div class="form-group">
       <label for="facilityName" openlmis-message="label.requisition.facilityName"></label>
-      <openlmis-select id="facilityName" disabled
-        ng-model="facilities"
-        placeholder=" {{facilityDisplayName}} ">
-      </openlmis-select>
+      <select id="facilityName" disabled
+        ng-model="selectedFacilityId"
+        ng-options="facility.id as facility.name for facility in facilities"
+        >
+      </select>
     </div>
     <div class="form-group">
       <label for="programListMyFacility" openlmis-message="label.program"></label>
-      <openlmis-select
+      <select
         id="programListMyFacility"
         ng-model="selectedProgram"
-        items="programs"
-        placeholder="{{ programOptionMessage() }}"
-        field-displayed="name"
-        order-by="id"
-        track-by="name"></openlmis-select>
+        ng-options="program as program.name for program in programs"
+      ></select>
     </div>
     <fieldset class="form-group">
       <legend openlmis-message="label.requisition.type"></legend>
